; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-redirect.c_redirect_destroy.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-redirect.c_redirect_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.redirect_priv = type { %struct.redirect_priv* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @redirect_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @redirect_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.redirect_priv*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.redirect_priv*
  store %struct.redirect_priv* %5, %struct.redirect_priv** %3, align 8
  %6 = load %struct.redirect_priv*, %struct.redirect_priv** %3, align 8
  %7 = icmp ne %struct.redirect_priv* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.redirect_priv*, %struct.redirect_priv** %3, align 8
  %10 = getelementptr inbounds %struct.redirect_priv, %struct.redirect_priv* %9, i32 0, i32 0
  %11 = load %struct.redirect_priv*, %struct.redirect_priv** %10, align 8
  %12 = call i32 @free(%struct.redirect_priv* %11)
  %13 = load %struct.redirect_priv*, %struct.redirect_priv** %3, align 8
  %14 = call i32 @free(%struct.redirect_priv* %13)
  br label %15

15:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @free(%struct.redirect_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
